refactor: fixed comments + swagger: continue docs
