# docs/swagger.json
@@ -32,6 +32,29 @@
                     "200": {
                         "description": "OK",
                         "schema": {
+                            "$ref": "#/definitions/models.SwaggerInputCreate"
+                        }
+                    }
+                }
+            }
+        },
+        "/list/:id": {
+            "get": {
+                "description": "Get a list by id",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "List"
+                ],
+                "summary": "Get List By ID",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
                             "$ref": "#/definitions/models.SwaggerList"
                         }
                     }
@@ -100,6 +123,14 @@
                     "type": "string"
                 },
                 "updatedAt": {
+                    "type": "string"
+                }
+            }
+        },
+        "models.SwaggerInputCreate": {
+            "type": "object",
+            "properties": {
+                "title": {
                     "type": "string"
                 }
             }
