# models/listModel.go
@@ -15,6 +15,10 @@ type List struct {
 	Tasks      []Task `gorm:"foreignKey:ListID;constraint:OnUpdate:CASCADE,OnDelete:CASCADE;"`
 }
 
+type SwaggerInputCreate struct {
+	Title string `gorm:"not null;size:255;" json:"title"`
+}
+
 type SwaggerLists struct {
 	List []List `json:"list"`
 }
